--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,10 @@ jobs:
       
       run: npm ci
       run: pm2 start index.js
+      name: build
+      run: npm run build
+      name: deploy
+      if: success()
+      run:
       
 
