--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14'
+        node-version: '18'
 
     - name: Install dependencies
       run: npm install
@@ -25,4 +25,4 @@ jobs:
       run: npm run build
 
     - name: Start Node.js application
-      run: npm start
+      run: npm start index.js
