--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,10 @@
 name: Node.js CI
-
 on:
   push:
     branches:
       - main
 jobs:
   build:
-
     runs-on: self-hosted
 
     steps:
@@ -20,6 +18,7 @@ jobs:
     - name: Install dependencies
       run: npm install
       
-      run: npm ci
+      #run: npm ci
+    - name: start project
       run: npm start index.js
       
