--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,24 +15,23 @@ jobs:
       with:
         node-version: '18'
 
-    - name: Install PM2
-      run: npm install -g pm2
-
-     - name: Install project dependencies
+    - name: Install dependencies
       run: npm install
+      
+      #run: npm ci
+    - name: start project
+      run: npm start index.js
+    
+      - name: Install PM2
+      run: npm install -g pm2
 
     - name: Build project (if needed)
       run: npm run build
 
     - name: Start application with PM2
       run: pm2 start index.js --name "JohnPapa Project"
-
-    - name: Save PM2 process list
-      run: pm2 save
-
-    - name: Show PM2 process status
-      run: pm2 status
       
-      #run: npm ci
-    - name: start project
+
      
+      
+
