--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Deploy Node.js with pm2
 on:
   push:
     branches:
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Use Node.js
+    - name: install Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '18'
@@ -30,6 +30,9 @@ jobs:
 
     - name: Start application with PM2
       run: pm2 start index.js --name "JohnPapa Project"
+
+    - name: Show PM2 process list
+      run: pm2 ls
       
 
      
