--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       run: npm run build
 
     - name: Start application with PM2
-      run: pm2 start index.js --name "JohnPapa Project"
+      run: pm2 start index.js 
 
     - name: Show PM2 process list
       run: pm2 ls
