--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,34 @@
-name:  Node.js with pm2
+name: Deploy with PM2
+
 on:
   push:
     branches:
       - main
+
 jobs:
-  build:
+  deploy:
     runs-on: self-hosted
 
     steps:
-    - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: use Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18'
-  
-    - name: start project
-      run: npm start index.js
-    
-    - name: Install PM2
-      run: npm install -g pm2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install PM2
+        run: npm install -g pm2
 
-    - name: Build project (if needed)
-      run: npm run build
+      - name: Install project dependencies
+        run: npm install
 
-    - name: Start application with PM2
-      run: pm2 start index.js --name "JohnPapa Project"
+      - name: Build project (if needed)
+        run: npm run build
 
-    - name: Show PM2 process list
-      run: pm2 ls
-      
+      - name: Start application with PM2
+        run: pm2 start app.js
 
-     
-      
-
+      - name: Show PM2 process list
+        run: pm2 list
