--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,39 @@
-name: Deploy with PM2
-
+name:  Node.js with pm2
 on:
   push:
     branches:
       - main
-
 jobs:
-  deploy:
-    runs-on: self-hosted
+  build:
+    runs-on: 'self-hosted'
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+    - name: use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '18'
 
-      - name: Install PM2
-        run: npm install -g pm2
+     - name: Install dependencies
+      run: npm install
+  
+    - name: start project
+      run: npm start index.js
+    
+    - name: Install PM2
+      run: npm install -g pm2
 
-      - name: Install project dependencies
-        run: npm install
+    - name: Build project (if needed)
+      run: npm run build
 
-      - name: Build project (if needed)
-        run: npm run build
+    - name: Start application with PM2
+      run: pm2 start index.js --name "JohnPapa Project"
 
-      - name: Start application with PM2
-        run: pm2 start app.js
+    - name: Show PM2 process list
+      run: pm2 ls
+      
 
-      - name: Show PM2 process list
-        run: pm2 list
+     
+      
+
