--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   build:
-    runs-on: 'self-hosted'
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v2
@@ -15,9 +15,9 @@ jobs:
       with:
         node-version: '18'
 
-     - name: Install dependencies
+    - name: Install dependencies
       run: npm install
-  
+      
     - name: start project
       run: npm start index.js
     
