--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,31 @@
-name:  Node.js with pm2
+name: Deploy Node.js with PM2
+
 on:
   push:
     branches:
       - main
+
 jobs:
-  build:
-    runs-on: self-hosted
+  deploy:
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-    - name: use Node.js
+    - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '18'
+        node-version: '14'
+
+    - name: Install PM2
+      run: npm install pm2 -g
 
     - name: Install dependencies
       run: npm install
-      
-    - name: start project
-      run: npm start index.js
-    
-    - name: Install PM2
-      run: npm install -g pm2
 
-    - name: Build project
-      run: npm run build
-
-    - name: Start application with PM2
-      run: pm2 start index.js --name "JohnPapa Project"
+    - name: Start Node.js application with PM2
+      run: pm2 start index.js --name "my-app"
 
     - name: Show PM2 process list
-      run: pm2 ls
-      
-
-     
-      
-
+      run: pm2 list
