--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - name: Checkout code
@@ -16,7 +16,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14'
+        node-version: '18'
 
     - name: Install PM2
       run: npm install pm2 -g
@@ -25,7 +25,7 @@ jobs:
       run: npm install
 
     - name: Start Node.js application with PM2
-      run: pm2 start index.js --name "my-app"
+      run: pm2 start index.js 
 
     - name: Show PM2 process list
       run: pm2 list
