--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,14 @@ jobs:
       with:
         node-version: '18'
 
-    - name: Install PM2
-      run: npm install pm2 -g
+    # - name: Install PM2
+    #   run: npm install pm2 -g
 
     - name: Install dependencies
       run: npm install
 
     - name: Start Node.js application with PM2
-      run: pm2 start index.js 
+      run: sudo pm2 start index.js 
 
     - name: Show PM2 process list
-      run: pm2 list
+      run: sudo pm2 list
